--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comfy</title>
-    <script src="https://kit.fontawesome.com/2c12dba70d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/public/css/styles.css">
-    <link rel="stylesheet" href="/public/css/nav.css">
-    <link rel="stylesheet" href="/public/css/hero.css">
-    <link rel="stylesheet" href="/public/css/products.css">
-    <link rel="stylesheet" href="/public/css/cart.css">
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/2c12dba70d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/public/css/styles.css" />
+    <link rel="stylesheet" href="/public/css/nav.css" />
+    <link rel="stylesheet" href="/public/css/hero.css" />
+    <link rel="stylesheet" href="/public/css/products.css" />
+    <link rel="stylesheet" href="/public/css/cart.css" />
+  </head>
+  <body>
     <!-- navbar -->
     <nav class="navbar">
-        <div class="navbar-center">
-            <span class="nav-icon">
-                <i class="fas fa-bars"></i>
-            </span>
-            <img src="/public/images/logo.svg" alt="store logo"/>
-            <div class="cart-btn"> 
-                <span class="nav-icon">
-                    <i class="fas fa-cart-plus"></i>
-                </span>
-                <div class="cart-items">0</div>
-            </div>
+      <div class="navbar-center">
+        <span class="nav-icon">
+          <i class="fas fa-bars"></i>
+        </span>
+        <img src="/public/images/logo.svg" alt="store logo" />
+        <div class="cart-btn">
+          <span class="nav-icon">
+            <i class="fas fa-cart-plus"></i>
+          </span>
+          <div class="cart-items">0</div>
         </div>
+      </div>
     </nav>
     <!-- end of navbar -->
     <!-- start of hero-->
     <header class="hero">
-        <div class="banner">
-            <h1 class= "banner-title"> Furniture Collection</h1> 
-            <button class="banner-btn">shop now</button>
-        </div>
+      <div class="banner">
+        <h1 class="banner-title">Furniture Collection</h1>
+        <button class="banner-btn">shop now</button>
+      </div>
     </header>
     <!--end of hero-->
     <!--start of product-->
     <section class="products">
-        <div class="section-title">
-            <h2>Our products</h2>
-        </div>
-        <div class="products-center">
-            <!--single product-->
-            <!-- <article class="product">
+      <div class="section-title">
+        <h2>Our products</h2>
+      </div>
+      <div class="products-center">
+        <!--single product-->
+        <!-- <article class="product">
                 <div class="img-container">
                     <img src="/public/images/product-1.jpeg" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1"><i class="fas fa-shopping-cart"></i>add to bag</button>
@@ -51,41 +54,25 @@
             <h3>quenn bed</h3>
             <h4>$16</h4>
             </article> -->
-            <!--eof single product-->
-        </div>
+        <!--eof single product-->
+      </div>
     </section>
     <!--eof product-->
     <!--start of cart-->
     <div class="cart-overlay">
-        <div class="cart">
-            <span class="close-cart">
-                <i class="fas fa-window-close"></i>
-            </span>
-            <h2>your cart</h2>
-           <div class="cart-content">
-               <!--cart item-->
-                <div class="cart-item">
-                    <img src="/public/images/product-1.jpeg" alt="product"/>
-                    <div>
-                        <h4>quenn bed</h4>
-                        <h5>$123</h5>
-                        <span class="remove-item">remove</span>
-                    </div>
-                    <div>
-                        <i class="fas fa-chevron-up"></i>
-                        <p class="item-amount">1</p>
-                        <i class="fas fa-chevron-down"></i>   
-                    </div>
-                </div>
-               <!--ef cart item-->
-           </div> 
-           <div class="cart-footer">
-               <h3>your total : $ <span class="cart-total">0</span></h3>
-               <button class="clear-cart banner-btn">clear cart</button> 
-           </div>
+      <div class="cart">
+        <span class="close-cart">
+          <i class="fas fa-window-close"></i>
+        </span>
+        <h2>your cart</h2>
+        <div class="cart-content"></div>
+        <div class="cart-footer">
+          <h3>your total : $ <span class="cart-total">0</span></h3>
+          <button class="clear-cart banner-btn">clear cart</button>
         </div>
+      </div>
     </div>
     <!--end of cart-->
     <script src="/public/scripts/app.js"></script>
-</body>
+  </body>
 </html>
